syntax = "proto3";

option go_package = ".;pb";

package proto;

service BothStream{
  rpc doRequest(stream BothStreamRequest) returns(stream BothStreamResponse){}
}

//请求
message BothStreamRequest{
  string reqIdx = 1;
  string reqData = 2;
}

//响应
message BothStreamResponse{
  string rspIdx = 1;
  string rspData = 2;
}

